# project_secretary

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: README.md  secretary-sync.service  secretary-sync.timer  surrealdb.service
docs/: deployment-webhook.md
docs/superpowers/specs/: 2026-06-09-memory-backbone-design.md  2026-06-10-organizer-design.md  2026-06-10-semantic-layer-design.md
src/secretary/: __init__.py  cli.py  config.py  llm.py
src/secretary/db/: connection.py  repo.py  schema.surql
src/secretary/deepwiki/: client.py
src/secretary/embeddings/: embedder.py  service.py
tests/: test_config.py  test_crossrefs.py  test_deepwiki_strip.py  test_embeddings.py  test_integration_db.py  test_integration_multirepo.py  test_integration_native.py  test_integration_organizer.py  test_labeler_apply.py  test_labeler_centroids.py  test_labeler_classify.py  test_labeler_judge.py  test_labeler_taxonomy.py  test_llm.py  test_models.py  test_native_dependencies.py  test_organizer_batch.py  test_organizer_cli.py  test_organizer_config.py  test_organizer_drift.py  test_organizer_expand.py  test_organizer_gaps.py  test_organizer_judge.py  test_organizer_models.py  test_organizer_order.py  test_organizer_plan_judge.py  test_organizer_priority.py  test_organizer_themes.py  test_organizer_writer.py  test_prompt.py  test_reconcile_lookback.py  test_reranker.py  test_section.py  test_steward_decide.py  test_steward_run.py  test_steward_veto.py  test_webhook_pool.py  test_webhook_routing.py  test_webhook_server.py  test_webhook_triage.py  (+1 more)
(+45 files in other folders)
